<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="viewModel"
            type="com.example.zappapp.ui.DashBoardViewModel" />


    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_24dp"
    tools:context=".ui.DashBoardActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        android:layout_gravity="start"
        />


<Button
    android:id="@+id/addItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/white"
    android:background="@color/colorPrimaryBlue"
    android:text="@string/add_photo"
    android:layout_gravity="center"
    />

    <LinearLayout
        android:id="@+id/layout_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button">

        <TextView
            style="@style/Arial.Gray_27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/title" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserTitle"
            style="@style/textInputEditText"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:hint="@string/photo_title"
            android:padding="@dimen/dimen_8dp"
            app:hintTextColor="@color/gray_27"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            style="@style/Arial.Gray_27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/url" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserURL"
            style="@style/textInputEditText"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:hint="@string/photo_url"
            android:padding="@dimen/dimen_8dp"
            app:hintTextColor="@color/gray_27"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/btn_save"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/ok" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="10dp"
        />



</LinearLayout>

</layout>
